--- a/14-E-commerce_Landing_Page/style.css
+++ b/14-E-commerce_Landing_Page/style.css
@@ -202,6 +202,13 @@ main img {
 
 }
 
+main  ul.products-list img{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+} 
+
 footer {
   width: 100vw;
   color: white;
@@ -212,7 +219,8 @@ footer {
   height: 6rem;
 }
 
-@media (min-width: 1440px) {
+
+@media (min-width: 1000px) {
   /* ---> HEADER <---- */
   header nav {
     width: auto;
@@ -271,5 +279,7 @@ footer {
   main #products ul.products-list {
     flex-direction: row;
   }
+
+
 
 }
